Maybe fixed CSS on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 html {
     width: 100%;
     height: 100%;
@@ -190,7 +185,7 @@ path:hover {
     }
 }
 
-@media (max-width: 1000px) {
+@media only screen and (max-width: 1200px){ 
     .form {
         padding: 60px;    
     }
@@ -227,7 +222,8 @@ path:hover {
 
     #charts {
         height: 50px;
-        display: flex;
+        padding-top: 30%;
+        display: none;
         text-align: center;
     }
 
@@ -248,19 +244,33 @@ path:hover {
     }
 
     #candidates {
-        height: 100px;
-        margin-bottom: 122px;
+        height: 20%;
         overflow-y: scroll;
         margin-bottom: 0;
     }
 }
 
-@media (max-width: 800px) {
+@media only screen and (max-width: 991px) { 
     .form {
         padding: 30px;  
     }
 
     #info-box {
         height: 80px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+
+    .bm-burger-button {
+        width:20px;
+        height: 15px;
+    }
+}
+
+@media only screen and (max-width: 479px) { 
+    .bm-burger-button {
+        width:20px;
+        height: 15px;
     }
 }
